f[metadata]
name = async-gfycat
version = 1.0.0
author = GreenArron
description = An async Python wrapper for the Gfycat API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GreenArron/async-gfycat
project_urls =
    Bug Tracker = https://github.com/GreenArron/async-gfycat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = async_gfycat
packages = find:
python_requires = >=3.7

[options.packages.find]
where = async_gfycat